@@ -5,12 +5,13 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.when;
 
 import bio.terra.externalcreds.BaseTest;
-import bio.terra.externalcreds.config.ProviderConfig;
-import bio.terra.externalcreds.config.ProviderConfig.ProviderInfo;
+import bio.terra.externalcreds.TestUtils;
+import bio.terra.externalcreds.config.ExternalCredsConfig;
 import bio.terra.externalcreds.models.GA4GHPassport;
 import bio.terra.externalcreds.models.GA4GHVisa;
 import bio.terra.externalcreds.models.LinkedAccount;
 import bio.terra.externalcreds.models.TokenTypeEnum;
+import com.google.common.collect.ImmutableMap;
 import com.nimbusds.jose.JOSEException;
 import com.nimbusds.jose.JWSAlgorithm;
 import com.nimbusds.jose.JWSHeader;
@@ -26,12 +27,12 @@ import com.nimbusds.jwt.SignedJWT;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.sql.Timestamp;
-import java.time.Duration;
 import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -58,7 +59,7 @@ public class AuthorizationCodeExchangeTest extends BaseTest {
 
   @MockBean OAuth2Service oAuth2Service;
   @MockBean ProviderClientCache providerClientCache;
-  @MockBean ProviderConfig providerConfig;
+  @MockBean ExternalCredsConfig externalCredsConfig;
 
   @Autowired ProviderService providerService;
 
@@ -170,7 +171,7 @@ public class AuthorizationCodeExchangeTest extends BaseTest {
   @Test
   void testJwtMissingIssuer() throws URISyntaxException, JOSEException {
     var jwtMissingIssuer =
-        createVisaJwtString(createTestVisa(TokenTypeEnum.access_token).withIssuer(null));
+        createVisaJwtString(createTestVisa(TokenTypeEnum.access_token).withIssuer("null"));
     assertThrows(InvalidJwtException.class, () -> providerService.decodeJwt(jwtMissingIssuer));
   }
 
@@ -204,8 +205,7 @@ public class AuthorizationCodeExchangeTest extends BaseTest {
       String redirectUri,
       Set<String> scopes,
       String state) {
-    var providerInfo = new ProviderInfo();
-    providerInfo.setLinkLifespan(Duration.ZERO);
+    var providerInfo = TestUtils.createRandomProvider();
     var providerClient =
         ClientRegistration.withRegistrationId(linkedAccount.getProviderId())
             .authorizationGrantType(AuthorizationGrantType.REFRESH_TOKEN)
@@ -223,12 +223,17 @@ public class AuthorizationCodeExchangeTest extends BaseTest {
     OAuth2User user =
         new DefaultOAuth2User(null, userAttributes, ProviderService.EXTERNAL_USERID_ATTR);
 
-    when(providerConfig.getServices())
-        .thenReturn(Map.of(linkedAccount.getProviderId(), providerInfo));
+    when(externalCredsConfig.getProviders())
+        .thenReturn(ImmutableMap.of(linkedAccount.getProviderId(), providerInfo));
     when(providerClientCache.getProviderClient(linkedAccount.getProviderId()))
         .thenReturn(providerClient);
     when(oAuth2Service.authorizationCodeExchange(
-            providerClient, authorizationCode, redirectUri, scopes, state, null))
+            providerClient,
+            authorizationCode,
+            redirectUri,
+            scopes,
+            state,
+            providerInfo.getAdditionalAuthorizationParameters()))
         .thenReturn(accessTokenResponse);
     when(oAuth2Service.getUserInfo(providerClient, accessTokenResponse.getAccessToken()))
         .thenReturn(user);
@@ -253,19 +258,26 @@ public class AuthorizationCodeExchangeTest extends BaseTest {
 
     assertEquals(
         expectedLinkedAccount,
-        linkedAccountWithPassportAndVisas.getLinkedAccount().withExpires(null).withId(0));
+        linkedAccountWithPassportAndVisas
+            .getLinkedAccount()
+            .withExpires(passportExpiresTime)
+            .withId(Optional.empty()));
 
     var stablePassport =
-        linkedAccountWithPassportAndVisas.getPassport() == null
-            ? null
-            : linkedAccountWithPassportAndVisas.getPassport().withId(0).withLinkedAccountId(0);
-    assertEquals(expectedPassport, stablePassport);
+        linkedAccountWithPassportAndVisas
+            .getPassport()
+            .map(p -> p.withId(Optional.empty()).withLinkedAccountId(Optional.empty()));
+    assertEquals(Optional.ofNullable(expectedPassport), stablePassport);
 
     var stableVisas =
         linkedAccountWithPassportAndVisas.getVisas() == null
             ? null
             : linkedAccountWithPassportAndVisas.getVisas().stream()
-                .map(visa -> visa.withLastValidated(null).withId(0).withPassportId(0))
+                .map(
+                    visa ->
+                        visa.withLastValidated(Optional.empty())
+                            .withId(Optional.empty())
+                            .withPassportId(Optional.empty()))
                 .collect(Collectors.toList());
     assertEquals(expectedVisas, stableVisas);
   }
@@ -301,6 +313,7 @@ public class AuthorizationCodeExchangeTest extends BaseTest {
         .userId(UUID.randomUUID().toString())
         .refreshToken(UUID.randomUUID().toString())
         .externalUserId(userEmail)
+        .expires(passportExpiresTime)
         .build();
   }
 
@@ -314,7 +327,7 @@ public class AuthorizationCodeExchangeTest extends BaseTest {
     var visaClaimSet =
         new JWTClaimsSet.Builder()
             .expirationTime(visa.getExpires())
-            .issuer(visa.getIssuer())
+            .issuer(visa.getIssuer() == "null" ? null : visa.getIssuer())
             .claim(
                 ProviderService.GA4GH_VISA_V1_CLAIM,
                 Map.of(ProviderService.VISA_TYPE_CLAIM, visa.getVisaType()))
@@ -345,6 +358,7 @@ public class AuthorizationCodeExchangeTest extends BaseTest {
             .tokenType(tokenType)
             .issuer(issuer)
             .expires(new Timestamp(passportExpires.getTime()))
+            .jwt("temp")
             .build();
     visa = visa.withJwt(createVisaJwtString(visa));
     return visa;
